--- a/Project 03 - PlayLocalVideo/app/src/main/res/layout/activity_main.xml
+++ b/Project 03 - PlayLocalVideo/app/src/main/res/layout/activity_main.xml
@@ -12,4 +12,9 @@
         android:layout_height="wrap_content"
         android:text="@string/app_name"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"/>
+
 </android.support.constraint.ConstraintLayout>
