--- a/Project 04 - SnapChatMenu/app/src/main/res/values/colors.xml
+++ b/Project 04 - SnapChatMenu/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#111111</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorRed">#FF1111</color>
+    <color name="colorGreen">#11FF11</color>
+    <color name="colorBlue">#1111FF</color>
 </resources>
