--- a/Project 08 - RandomGradientColorMusic/app/src/main/res/values/colors.xml
+++ b/Project 08 - RandomGradientColorMusic/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorRed">#FF1111</color>
+    <color name="colorGreen">#11FF11</color>
+    <color name="colorBlue">#1111FF</color>
 </resources>
