--- a/Project 08 - RandomGradientColorMusic/app/src/main/res/layout/activity_main.xml
+++ b/Project 08 - RandomGradientColorMusic/app/src/main/res/layout/activity_main.xml
@@ -13,4 +13,13 @@
         android:onClick="myViewClick"
          />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/music_play"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
